crates/no_expect_outside_tests/examples/fail_expect_in_tokio_crate_non_test_fn.stderr
error: Avoid calling expect on `std::option::Option<&str>` outside test-only code.
  --> $DIR/fail_expect_in_tokio_crate_non_test_fn.rs:10:13
   |
LL |     let _ = parsed.expect("ordinary code in a Tokio crate must still lint");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: The call originates within function `parse_config` which is not recognised as a test.
   = help: Handle the `None` variant of `std::option::Option<&str>` or move the code into a test.
   = note: requested on the command line with `-D no-expect-outside-tests`

error: aborting due to 1 previous error

